trying to fix body on mobile

--- a/projects/personal/borks/style.css
+++ b/projects/personal/borks/style.css
@@ -6,9 +6,14 @@
   box-sizing: border-box;
 }
 
+/* :root {
+  width: 100%;
+  height: 100%;
+} */
+
 body {
-  width: 100vw;
-  height: 100vh;
+  width: 100dvw;
+  height: 100dvh;
   margin: 0;
   padding: 5px;
 
